--- a/package.json
+++ b/package.json
@@ -5,23 +5,32 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "dev": "rm -rdf dist;concurrently \"webpack watch\" \"http-server . -p 8800 -s -c-1\""
+        "dev1": "rm -rdf dist;concurrently \"webpack watch\" \"http-server . -p 8800 -s -c-1\"",
+        "dev": "rm -rdf dist/front;concurrently \"webpack watch\" \"node server/dist/index.js\"",
+        "generate": "tsc --build server/tsconfig.json",
+        "dev-server": "concurrently \"tsc -b -w server/tsconfig.json\" \"nodemon --ext 'js' --ignore 'db/*' --trace-warnings server/dist/index.js\""
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "devDependencies": {
         "@types/dat.gui": "^0.7.7",
+        "@types/express": "^4.17.17",
         "@types/three": "^0.140.0",
         "concurrently": "^7.3.0",
         "http-server": "^14.1.1",
+        "nodemon": "^2.0.21",
         "ts-loader": "^9.3.0",
         "ts-node": "^10.7.0",
+        "typescript": "^4.9.5",
         "webpack": "^5.72.0",
         "webpack-cli": "^4.9.2"
     },
     "dependencies": {
+        "axios": "^1.3.4",
+        "cors": "^2.8.5",
         "dat.gui": "^0.7.9",
+        "express": "^4.18.2",
         "three": "^0.140.0",
         "three-fbxloader-offical": "^1.0.0"
     }
